--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
     "author": "LF112",
     "license": "AGPL-3.0-or-later",
     "dependencies": {
+        "@douyinfe/semi-icons": "^2.47.0",
+        "@douyinfe/semi-ui": "^2.47.0",
+        "@headlessui/react": "^1.7.17",
+        "@heroicons/react": "^2.0.18",
         "@types/node": "^17.0.45",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "@types/styled-components": "^5.1.25",
         "@vitejs/plugin-react": "^2.0.0",
+        "fflate": "^0.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-is": "^18.2.0",
         "styled-components": "^5.3.5",
+        "tailwindcss": "^3.3.5",
         "vite": "^3.0.4",
         "vite-plugin-svgr": "^2.2.1",
-        "vite-tsconfig-paths": "^3.5.0"
+        "vite-tsconfig-paths": "^3.5.0",
+        "xlsx": "^0.18.5"
     }
 }
