--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "@douyinfe/semi-ui": "^2.47.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
+        "@types/file-saver": "^2.0.7",
         "@types/node": "^17.0.45",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "@types/styled-components": "^5.1.25",
         "@vitejs/plugin-react": "^2.0.0",
         "fflate": "^0.8.1",
+        "file-saver": "^2.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-is": "^18.2.0",
