--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-    "name": "temp",
-    "version": "0.0.1",
-    "description": "",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/LF112"
-    },
-    "author": "LF112",
-    "license": "AGPL-3.0-or-later",
-    "dependencies": {
-        "@douyinfe/semi-icons": "^2.47.0",
-        "@douyinfe/semi-ui": "^2.47.0",
-        "@headlessui/react": "^1.7.17",
-        "@heroicons/react": "^2.0.18",
-        "@types/file-saver": "^2.0.7",
-        "@types/node": "^17.0.45",
-        "@types/react": "^18.0.15",
-        "@types/react-dom": "^18.0.6",
-        "@types/styled-components": "^5.1.25",
-        "@vitejs/plugin-react": "^2.0.0",
-        "fflate": "^0.8.1",
-        "file-saver": "^2.0.5",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-is": "^18.2.0",
-        "styled-components": "^5.3.5",
-        "tailwindcss": "^3.3.5",
-        "vite": "^3.0.4",
-        "vite-plugin-svgr": "^2.2.1",
-        "vite-tsconfig-paths": "^3.5.0",
-        "xlsx": "^0.18.5"
-    }
+  "name": "renpy-tl-tpp-tools",
+  "version": "0.0.1",
+  "description": "",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LF112"
+  },
+  "author": "LF112",
+  "license": "AGPL-3.0-or-later",
+  "dependencies": {
+    "@douyinfe/semi-icons": "^2.53.2",
+    "@douyinfe/semi-ui": "^2.53.2",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "@types/styled-components": "^5.1.34",
+    "@vitejs/plugin-react": "^2.2.0",
+    "fflate": "^0.8.2",
+    "file-saver": "^2.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "styled-components": "^5.3.11",
+    "tailwindcss": "^3.4.1",
+    "vite-plugin-svgr": "^2.4.0",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "vite": "^3.2.8",
+    "vite-tsconfig-paths": "^3.6.0"
+  }
 }
